# clipse-rs

./: Cargo.toml  README.md
src/: app.rs  clipboard.rs  config.rs  encryption.rs  lib.rs  main.rs  stack.rs
