[package]
name = "clipse"
author = "Adhyan H"
description = "a cli clipboard manager for linux"
license = "MIT"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/frroossst/clipse-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
