[package]
name = "clipse"
author = "Adhyan H"
description = "a cli clipboard manager for linux"
license = "MIT"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/frroossst/clipse-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
ratatui = "0.25.0"


# optimise for size
[profile.release]
lto = true
opt-level = "z"
debug = false
