[package]
name = "clipse"
description = "a cli clipboard manager for linux"
license = "MIT"
version = "1.0.0"
edition = "2021"
repository = "https://github.com/frroossst/clipse-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = { version = "4.4.11", features = ["derive"] }
confy = "0.5.1"
crossterm = "0.27.0"
ratatui = "0.25.0"
serde = { version = "1.0.193", features = ["derive"] }
sha2 = "0.10.8"


# optimise for size
[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
debug = false
